--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ repository               : "kaelkropp/kaelkropp.github.io"
 
 # Site Author - Sidebar content
 author:
-  avatar           : "profile.png"
+  avatar           : "Kael_HeadShot-2.JPG"
   name             : "Kael Kropp"
   pronouns         : "he/him"
   bio              : "PhD Candidate at McGill University studying Canadian politics, public policy, and urban governance."
