--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -6,3 +6,19 @@
 #
 # NOTE that only one of the CV options should be selected, the first is for the
 #      Markdown formatted page while the second is generated using JSON.
+
+main:
+  - title: "Publications"
+    url: /publications/
+    
+  - title: "Media"
+    url: /portfolio/
+    
+  - title: "Conferences"
+    url: /talks/     
+    
+  - title: "CV"
+    url: /cv/
+    
+  # - title: "CV"
+  #   url: /cv-json/
