--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,10 +11,10 @@ main:
   - title: "Publications"
     url: /publications/
     
-  - title: "Media"
+  - title: "Portfolio"
     url: /portfolio/
     
-  - title: "Conferences"
+  - title: "Talks"
     url: /talks/     
     
   - title: "CV"
